--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,17 @@
 			<artifactId>cloudinary-http44</artifactId>
 			<version>1.24.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.17.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.13.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
